Fixed wraping of technologies and languages in profile page

--- a/src/DevHive.Angular/src/app/components/profile/profile.component.css
+++ b/src/DevHive.Angular/src/app/components/profile/profile.component.css
@@ -72,6 +72,7 @@ hr {
   width: 100%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 /* Posts */
